...
val DESTINATIONS_ALFOLD = listOf(
    Destination(
        osmId = "3586527987",
        relId = "15258734",
        location = Location(46.3337500, 20.0661000),
        description = SharedRes.strings.alfold_siraly_tanosveny,
        name = "Sirály tanösvény",
        town = "Szeged, Fehér-tó",
        type = DestinationType.TRAIL,
        popularity = 3,
    ),
    Destination(
        osmId = "249914845",
...
        popularity = 8,
        description = SharedRes.strings.visegrad_nagy_villam,
    ),
    Destination(
        osmId = "479957518",
        location = Location(47.7390279, 18.8939068),
        name = "Rám-szakadék",
        town = "Dömös",
        type = DestinationType.GORGE,
        popularity = 10,
        description = SharedRes.strings.visegrad_ram_szakadek,
    ),
    Destination(
...
        popularity = 3,
        description = SharedRes.strings.visegrad_pilisszentlaszlo_hegyteto,
    ),
    Destination(
        osmId = "130074457",
        location = Location(47.7193911, 18.8961602),
        name = "Dobogókő",
        town = "Pilisszentkereszt",
        type = DestinationType.PEAK,
        popularity = 10,
        description = SharedRes.strings.visegrad_dobogoko,
    ),
    Destination(
...
